...
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/main_cell_edit_area"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:enabled="false"
            android:focusable="true"
...
            android:text="@string/add_row" />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_margin="5dp"
        android:background="@color/background_white"
...
